# MapReduce-PhaseExecution3

./: CMakeLists.txt  MRExec  README.md  main.cpp
headers/: FileProcessorBase.hpp  MapperBase.hpp  ReducerBase.hpp  ShufflerBase.hpp
